zg 13.10.2016 17:16:58 +0200 - build 4823

1. 0003327: ECTL_REDRAW does not redraw during processing.

drkns 13.10.2016 09:33:05 +0200 - build 4822

1. Уточнение 4603. Передаём перечисленное в кастомную сортировку только если оно уже считано или будет.

drkns 12.10.2016 23:24:37 +0200 - build 4821

1. 0003304: Вывод на консоль из плагина удваивается за пределами окна

zg 11.10.2016 18:16:57 +0200 - build 4820

1. уточнение 4818: при нажатии enter на панели multiarc задавался вопрос на распаковку.

2. уточнение 4818: аналогичное поведение для запуска по enter встроенных ассоциаций.

drkns 10.10.2016 23:09:35 +0200 - build 4819

1. Сократим немного копипасту в проверке времени изменения файла.

zg 10.10.2016 16:33:04 +0200 - build 4818

1. 0003325: Detect external file editing and post back to plugin.

drkns 10.10.2016 02:27:15 +0200 - build 4817

1. Уточнение 4816.

drkns 09.10.2016 21:48:44 +0200 - build 4816

1. Рефакторинг.

drkns 09.10.2016 01:42:02 +0200 - build 4815

1. Уточнение 4796.4.

2. В makefile_vc можно выключать LTCG для отладочных целей.

3. Команды из svn_tag_build_ssl.m4 переехали в svn_tag_build_ssl.bat.
   Также теперь оно явно показывает, какой тег собирается создавать.

drkns 08.10.2016 15:14:07 +0200 - build 4814

1. В режиме постоянных блоков сбрасывалось выделение в строке при замене.

zg 08.10.2016 13:51:32 +0200 - build 4813

1. 0003324: Find/Replace in editor does not highlight found entries.

drkns 08.10.2016 10:38:23 +0200 - build 4812

1. Обход очередного бага VS.

drkns 08.10.2016 02:27:23 +0200 - build 4811

1. Продолжение 4810.2.

drkns 08.10.2016 01:10:06 +0200 - build 4810

1. Ещё раз о флагах консоли: вместо создания с нуля наследуем существующие и меняем только то, что нам нужно.

2. Рефакторинг.

drkns 06.10.2016 22:59:17 +0200 - build 4809

1. Не сохранялись флаги консоли ENABLE_AUTO_POSITION и ENABLE_INSERT_MODE:
   - окно могло неоптимально позиционироваться при разворачивании;