@@ -1,3 +1,9 @@
+w17 14.10.2016 20:34:39 +0300 - build 4824
+
+1. Привычное поведение при показе числа фоновых окон.
+   Panel.ScreenNumber теперь 3-state, с умолчанием = 1.
+   Число диалогов показываем только для состояния 2.
+
 zg 13.10.2016 17:16:58 +0200 - build 4823
 
 1. 0003327: ECTL_REDRAW does not redraw during processing.
